--- a/Monets/Properties/launchSettings.json
+++ b/Monets/Properties/launchSettings.json
@@ -3,20 +3,12 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:27592",
+      "applicationUrl": "https://localhost:44340/",
       "sslPort": 44340
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Monets": {
       "commandName": "Project",
       "launchBrowser": true,
