reworked client and employee logic, added client module to forms app

--- a/Monets.WinUI/Monets.WinUI.csproj
+++ b/Monets.WinUI/Monets.WinUI.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="CircularProgressBar" Version="2.8.0.16" />
     <PackageReference Include="Flurl.Http" Version="3.2.0" />
     <PackageReference Include="FontAwesome.Sharp" Version="5.15.3" />
+    <PackageReference Include="PagedList" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
