--- a/Monets/Properties/launchSettings.json
+++ b/Monets/Properties/launchSettings.json
@@ -3,15 +3,23 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44340/",
+      "applicationUrl": "http://localhost:27592",
       "sslPort": 44340
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "weatherforecast",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "Monets": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
