fixed connection string in web ui

--- a/Monets.WinUI/Properties/Settings.settings
+++ b/Monets.WinUI/Properties/Settings.settings
@@ -3,15 +3,15 @@
   <Profiles />
   <Settings>
     <Setting Name="APIUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://localhost:5001/api</Value>
+      <Value Profile="(Default)">http://localhost:5010/api</Value>
     </Setting>
     <Setting Name="MonetsConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source="localhost, 1433";Initial Catalog=Monets;User ID=sa;Password=Password123&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source="monets-sql, 1433";Initial Catalog=180070; User ID=sa;Password=Password123&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source="localhost, 1433";Initial Catalog=Monets;User ID=sa;Password=Password123</Value>
+      <Value Profile="(Default)">Data Source="monets-sql, 1433";Initial Catalog=180070; User ID=sa;Password=Password123</Value>
     </Setting>
   </Settings>
 </SettingsFile>
